--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ pretty_env_logger = "0.4.0"
 artnet_protocol = "0.2.0"
 bincode = "1.2.1"
 serde =  { version = "1.0", features = ["derive"] }
+anyhow = "1.0"
