Implement mapping of arbitrary Art-Net universes

--- a/examples/config.json
+++ b/examples/config.json
@@ -1,8 +1,8 @@
 {
-    "artnet_address": "192.168.1.1",
-    "kinet_address": "10.0.0.1",
-    "pds_addresses": [
-        "10.32.152.122",
-        "10.32.152.123"
+    "artnet_receive_ip": "192.168.1.1",
+    "kinet_send_ip": "10.0.0.1",
+    "mappings": [
+        "0:10.32.152.122:0",
+        "1:10.32.152.123:0"
     ]
 }
