Add .md files to release

--- a/.github/workflows/rust-build-test-release.yml
+++ b/.github/workflows/rust-build-test-release.yml
@@ -49,4 +49,5 @@ jobs:
         uses: houseabsolute/actions-rust-release@v0
         with:
           executable-name: artnet-bridge
+          extra-files: "*.md"
           target: ${{ matrix.platform.target }}
