--- a/.github/workflows/rust-build-test-release.yml
+++ b/.github/workflows/rust-build-test-release.yml
@@ -56,4 +56,5 @@ jobs:
         with:
           executable-name: artnet-bridge
           extra-files: "README.md\nLICENSE.md"
+          changes-file: "CHANGES.md"
           target: ${{ matrix.platform.target }}
